--- a/bom/application/pom.xml
+++ b/bom/application/pom.xml
@@ -1693,6 +1693,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-rest-spi</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-rest-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
