--- a/test-framework/pom.xml
+++ b/test-framework/pom.xml
@@ -23,6 +23,7 @@
         <module>junit5-internal</module>
         <module>junit5</module>
         <module>junit5-mockito</module>
+        <module>junit5-web</module>
         <module>amazon-lambda</module>
         <module>arquillian</module>
         <module>devmode-test-utils</module>
