--- a/extensions/quarkus-rest/runtime/pom.xml
+++ b/extensions/quarkus-rest/runtime/pom.xml
@@ -35,7 +35,7 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-jsonb</artifactId>
+            <artifactId>quarkus-jsonp</artifactId>
         </dependency>
     </dependencies>
 
