--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -37,6 +37,7 @@
         <module>webjars-locator</module>
         <module>quarkus-rest</module>
         <module>quarkus-rest-jsonb</module>
+        <module>quarkus-rest-jackson</module>
         <module>quarkus-rest-qute</module>
 
         <!-- Monitoring -->
