Move util classes

--- a/extensions/quarkus-rest/quarkus-rest-common/runtime/pom.xml
+++ b/extensions/quarkus-rest/quarkus-rest-common/runtime/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.smallrye.reactive</groupId>
+            <artifactId>mutiny</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-vertx-core</artifactId>
         </dependency>
