Start making a mess

--- a/extensions/quarkus-rest/quarkus-jaxrs-client/runtime/pom.xml
+++ b/extensions/quarkus-rest/quarkus-jaxrs-client/runtime/pom.xml
@@ -24,6 +24,10 @@
             <artifactId>quarkus-vertx-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
