--- a/extensions/quarkus-rest/quarkus-jaxrs-client/deployment/pom.xml
+++ b/extensions/quarkus-rest/quarkus-jaxrs-client/deployment/pom.xml
@@ -24,6 +24,10 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-common-deployment</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
             <artifactId>quarkus-jaxrs-client</artifactId>
         </dependency>
         <dependency>
