--- a/extensions/quarkus-rest/quarkus-rest-common/runtime/pom.xml
+++ b/extensions/quarkus-rest/quarkus-rest-common/runtime/pom.xml
@@ -28,6 +28,10 @@
             <artifactId>quarkus-vertx-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jsonp</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
