--- a/extensions/quarkus-rest/quarkus-jaxrs-client/runtime/pom.xml
+++ b/extensions/quarkus-rest/quarkus-jaxrs-client/runtime/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-rest</artifactId>
+            <artifactId>quarkus-rest-common</artifactId>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
