--- a/extensions/quarkus-rest/quarkus-rest-common/spi/pom.xml
+++ b/extensions/quarkus-rest/quarkus-rest-common/spi/pom.xml
@@ -18,6 +18,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-core-deployment</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.spec.javax.ws.rs</groupId>
+            <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
+        </dependency>
     </dependencies>
 
 
