--- a/extensions/quarkus-rest/quarkus-rest-qute/runtime/pom.xml
+++ b/extensions/quarkus-rest/quarkus-rest-qute/runtime/pom.xml
@@ -31,6 +31,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-qute</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
